# log-analyzer

./: CMakeLists.txt  README.md  generator_logs.py
src/: LogParser.cpp  LogParser.hpp  main.cpp
